--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmdu-cli",
-  "version": "1.0.12",
+  "version": "1.1.0",
   "description": "CLI tool for using cmdu to create a new command line app.",
   "bin": {
     "cmdu": "./bin/index.js"
@@ -27,7 +27,8 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.3",
-    "cmdu": "^1.0.4",
-    "inquirer": "^1.0.3"
+    "cmdu": "^1.1.0",
+    "inquirer": "^1.0.3",
+    "os-locale": "^2.0.0"
   }
 }
